Fix profile image path: jpg to png

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h2 class="section__title">About</h2>
                 <div class="about">
                     <div class="about__image-wrapper">
-                        <img src="profile.jpg" alt="神野天里のプロフィール写真" class="about__image">
+                        <img src="profile.png" alt="神野天里のプロフィール写真" class="about__image">
                     </div>
                     <div class="about__content">
                         <h3 class="about__name">神野 天里 <span class="about__name-en">Tenri Jinno</span></h3>
