Add pebble_accretion.mp4 and update simulation section (2023→2024→2026 order)

--- a/index.html
+++ b/index.html
@@ -144,11 +144,10 @@
                     <div class="research__simulation-grid">
                         <div class="research__simulation-item">
                             <video class="research__video" controls playsinline>
-                                <source src="snap_animation_fast.mp4" type="video/mp4">
+                                <source src="pebble_accretion.mp4" type="video/mp4">
                                 お使いのブラウザは動画タグをサポートしていません。
                             </video>
-                            <p class="research__video-title">微惑星円盤からの複数惑星の形成過程と惑星が微惑星を散乱しながら移動する様子 [Jinno et al., 2026]</p>
-                            <p class="research__video-credit">令和7年度「富岳」若手課題の研究結果</p>
+                            <p class="research__video-title">層流領域内(0.5〜3.3 au)で最大100万体の小石(ペブル)から、ダスト落下・リング形成を考慮した惑星形成過程をシミュレーション [Jinno et al., 2023]</p>
                         </div>
                         <div class="research__simulation-item">
                             <video class="research__video" controls playsinline>
@@ -157,6 +156,14 @@
                             </video>
                             <p class="research__video-title">微惑星円盤内で惑星が微惑星を散乱しながら移動する様子 [Jinno et al., 2024]</p>
                             <p class="research__video-credit">令和6年度「富岳」若手課題の研究結果</p>
+                        </div>
+                        <div class="research__simulation-item">
+                            <video class="research__video" controls playsinline>
+                                <source src="snap_animation_fast.mp4" type="video/mp4">
+                                お使いのブラウザは動画タグをサポートしていません。
+                            </video>
+                            <p class="research__video-title">微惑星円盤からの複数惑星の形成過程と惑星が微惑星を散乱しながら移動する様子 [Jinno et al., 2026]</p>
+                            <p class="research__video-credit">令和7年度「富岳」若手課題の研究結果</p>
                         </div>
                     </div>
                 </div>
