Update pebble_accretion video caption

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                 <source src="pebble_accretion.mp4" type="video/mp4">
                                 お使いのブラウザは動画タグをサポートしていません。
                             </video>
-                            <p class="research__video-title">層流領域内(0.5〜3.3 au)で最大100万体の小石(ペブル)から、ダスト落下・リング形成を考慮した惑星形成過程をシミュレーション [Jinno et al., 2023]</p>
+                            <p class="research__video-title">層流領域内(0.5〜3.3 au)で最大100万体の小石(ペブル)の落下・リング形成を考慮した惑星形成の様子 [Jinno et al., 2023]</p>
                         </div>
                         <div class="research__simulation-item">
                             <video class="research__video" controls playsinline>
