--- a/index.html
+++ b/index.html
@@ -47,21 +47,23 @@
         </nav>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero" id="home">
-        <div class="hero__background">
-            <img src="homepage2.png" alt="" class="hero__image">
-            <div class="hero__overlay"></div>
-        </div>
-        <div class="hero__content">
-            <h1 class="hero__title">Welcome to Tenri Jinno's Homepage</h1>
-            <p class="hero__description-en">Ph.D. Student, Department of Planetology, Kobe University</p>
-        </div>
-    </section>
-
     <main class="main">
+        <!-- Hero Section -->
+        <section class="page" id="home">
+            <div class="hero">
+                <div class="hero__background">
+                    <img src="homepage2.png" alt="" class="hero__image">
+                    <div class="hero__overlay"></div>
+                </div>
+                <div class="hero__content">
+                    <h1 class="hero__title">Welcome to Tenri Jinno's Homepage</h1>
+                    <p class="hero__description-en">Ph.D. Student, Department of Planetology, Kobe University</p>
+                </div>
+            </div>
+        </section>
+
         <!-- About Section -->
-        <section class="section" id="about">
+        <section class="page section" id="about">
             <div class="container">
                 <h2 class="section__title">About</h2>
                 <div class="about">
@@ -95,7 +97,7 @@
         </section>
 
         <!-- Research Section -->
-        <section class="section section--alt" id="research">
+        <section class="page section section--alt" id="research">
             <div class="container">
                 <h2 class="section__title">Research</h2>
 
@@ -171,7 +173,7 @@
         </section>
 
         <!-- Publications Section -->
-        <section class="section" id="publications">
+        <section class="page section" id="publications">
             <div class="container">
                 <h2 class="section__title">Publications</h2>
 
@@ -215,7 +217,7 @@
         </section>
 
         <!-- Awards Section -->
-        <section class="section section--alt" id="awards">
+        <section class="page section section--alt" id="awards">
             <div class="container">
                 <h2 class="section__title">Awards & Projects</h2>
 
@@ -284,7 +286,7 @@
         </section>
 
         <!-- Presentations Section -->
-        <section class="section" id="presentations">
+        <section class="page section" id="presentations">
             <div class="container">
                 <h2 class="section__title">Presentations</h2>
 
@@ -461,7 +463,7 @@
         </section>
 
         <!-- Career Section -->
-        <section class="section section--alt" id="career">
+        <section class="page section section--alt" id="career">
             <div class="container">
                 <h2 class="section__title">Career</h2>
 
@@ -502,7 +504,7 @@
         </section>
 
         <!-- Contact Section -->
-        <section class="section" id="contact">
+        <section class="page section" id="contact">
             <div class="container">
                 <h2 class="section__title">Contact</h2>
                 <div class="contact">
@@ -539,29 +541,29 @@
 
     <script>
         // Tab navigation system
-        const sections = document.querySelectorAll('.section, .hero');
+        const pages = document.querySelectorAll('.page');
         const navLinks = document.querySelectorAll('.nav__link');
         const navToggle = document.getElementById('nav-toggle');
         const navMenu = document.getElementById('nav-menu');
         const header = document.getElementById('header');
 
-        // Function to show only the selected section
-        function showSection(sectionId) {
-            // Hide all sections
-            sections.forEach(section => {
-                section.classList.remove('section--active');
+        // Function to show only the selected page
+        function showPage(pageId) {
+            // Hide all pages
+            pages.forEach(page => {
+                page.classList.remove('page--active');
             });
 
-            // Show the selected section
-            const targetSection = document.getElementById(sectionId);
-            if (targetSection) {
-                targetSection.classList.add('section--active');
+            // Show the selected page
+            const targetPage = document.getElementById(pageId);
+            if (targetPage) {
+                targetPage.classList.add('page--active');
             }
 
             // Update active nav link
             navLinks.forEach(link => {
                 link.classList.remove('nav__link--active');
-                if (link.getAttribute('href') === '#' + sectionId) {
+                if (link.getAttribute('href') === '#' + pageId) {
                     link.classList.add('nav__link--active');
                 }
             });
@@ -570,15 +572,15 @@
             window.scrollTo(0, 0);
 
             // Update URL hash without scrolling
-            history.pushState(null, null, '#' + sectionId);
+            history.pushState(null, null, '#' + pageId);
         }
 
         // Navigation click handler
         navLinks.forEach(link => {
             link.addEventListener('click', function(e) {
                 e.preventDefault();
-                const sectionId = this.getAttribute('href').substring(1);
-                showSection(sectionId);
+                const pageId = this.getAttribute('href').substring(1);
+                showPage(pageId);
 
                 // Close mobile menu
                 navToggle.setAttribute('aria-expanded', 'false');
@@ -605,7 +607,7 @@
         // Handle initial load and browser back/forward
         function handleHashChange() {
             const hash = window.location.hash.substring(1) || 'home';
-            showSection(hash);
+            showPage(hash);
         }
 
         window.addEventListener('hashchange', handleHashChange);
